user microposts data ajax false

--- a/app/views/microposts/_micropost.mobile.erb
+++ b/app/views/microposts/_micropost.mobile.erb
@@ -1,5 +1,5 @@
 <li id="<%= micropost.id %>">
-	<a href="../microposts/<%= micropost.id %>">
+	<a href="../microposts/<%= micropost.id %>" data-ajax="false">
 		<div class="user_wall">
 			<%= micropost.user.name %>
 		</div> 
