changed newUsers to span4

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -148,8 +148,7 @@ padding-top: 195px;
 .imagewrapper {
 	max-width: 30px;
 	max-height: 30px;
-	position: relative;
-	display: block;
+	position: static;
 }
 
 #whatfbknows {
