changed newUsers to span4

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -148,7 +148,7 @@ padding-top: 195px;
 .imagewrapper {
 	max-width: 30px;
 	max-height: 30px;
-	position: static;
+	height: 30px;
 	display: inline;
 }
 
