--- a/app/views/microposts/_helptext.html.erb
+++ b/app/views/microposts/_helptext.html.erb
@@ -1,21 +1,20 @@
 <div id="helpinnertext">
 	<section id="help_wall">
-		<h2>Schreibe</h2><%= image_tag "post-it.jpg", :size => "50x50" %><h3> an unsere </h3><h1>Connectfiy-Pinnwand</h1>
+		<h2 class="lead">Schreibe </h2><%= image_tag "post-it.jpg", :size => "50x50" %><h3 class="lead"> an unsere </h3><h1 class="lead">Connectfiy-Pinnwand</h1>
 	</section>
 
 	<section id="help_hobby">
-		<h4>1. DEIN HOBBY</h4>
+		<h4 class="lead">1. DEIN HOBBY</h4>
 		<p>Zuerst wählst du dein Hobby: z.B. Klettern, Joggen oder Bogenschießen.<br> Deines ist nicht dabei?! Schreib uns!</p>
 	</section>
 
 	<section id="help_place">
-		<h4>2. DEIN ORT</h4>
+		<h4 class="lead">2. DEIN ORT</h4>
 		<p>Wenn du möchtest, wird deine aktuelle Stadt ermittelt. Keine Angst, wir speichern <em>KEINE</em> Bewegungsprofile oder ähnliche Dinge, die in deine Privatsphäre eingreifen. Es soll dir einfach helfen schneller zu sein. Sonst nichts.</p> 
 	</section>
 
 	<section id="help_optional">
-		<h2>und schon fertig :D Ab hier sind alle Angaben freiwillig!</h2>
-		<p>-----------------------------------------------------------------------------------------------------------------------------------</p> 
+		<h2 class="lead">und schon fertig :D Ab hier sind alle Angaben freiwillig!</h2>
 	</section>
 
 	<section id="help_map">
@@ -24,12 +23,12 @@
 	</section>
 
 	<section id="help_time">
-		<h4>DEINE ZEIT</h4>
+		<h4 class="lead">DEINE ZEIT</h4>
 		<p>Wähle aus dem Kalender einen Tag und eine Uhrzeit aus. Dann klicke neben den Kalender ...und weiter gehts!</p> 
 	</section>
 
 	<section id="help_about">
-		<h4>DEINE STORY</h4>
+		<h4 class="lead">DEINE STORY</h4>
 		<p>Jetzt kannst du noch etwas über dich oder die Welt schreiben - wenn du magst :)</p> 
 	</section>
 
