--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -7,7 +7,7 @@
 <% else %>
 	<!-- <h3>Neu hier? Kein Problem. Wir helfen dir dabei dich zurechtzufinden. Es ist ganz einfach:</h3> -->
 	<div id="helptext">
-		<%= image_tag("help.gif") %>
+		<!-- <%= image_tag("help.gif") %> -->
 		<%= render 'helptext' %>
 	</div>
 <% end %>
