--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -2,7 +2,7 @@
 	<%= render 'shared/error_messages', object: f.object %>
 	<%= f.hidden_field :latlng, :value => "" %>
 	<%= f.hidden_field :country, :value => "" %>
-	<br /><p><b><span class="lsf-icon" title="write" style="font-size: 23px; float: left;"></span><%= t('home.micropost.create') %></b></p>
+	<br /><p><b><span class="lsf-icon" title="plus" style="font-size: 23px; float: left;"></span><%= t('home.micropost.create') %></b></p>
     <span style="clear:both;"></span>
 	<!-- <div class="field">
 		<div class="ui-widget">
