--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -4,7 +4,11 @@
 		<strong id="following" class="stat">
 			<%= @user.followed_users.count %>
 		</strong>
-		<%= t("following") %>
+		<% if current_user?(@user) %>
+			<%= t("following") %>
+		<% else %>
+			<%= t("following2")+@user.name.split[0] %>
+		<% end %>
 	</a>
 	<a href="<%= followers_user_path(@user) %>">
 		<strong id="followers" class="stat">
