--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,9 @@
 <li>
 	<%= gravatar_for user, size: 92 %>
 	<h3><%= link_to user.name, user %></h3>
-	<p>letzte Aktivität in <b><%= user.last_active %></b></p>
+	<% unless user.last_active.nil? %>
+		<p>letzte Aktivität in <b><%= user.last_active %></b></p>
+	<% end %>
 	<% if current_user.admin? && !current_user?(user) %>
 	| <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
 	<% end %>
