--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -153,9 +153,6 @@ padding-top: 195px;
 }
 
 #whatfbknows {
-	margin-top: 32px;
-	border-color: #D4F0D4; 
-	background: #EBF3EC;
 }
 
 /* header */
@@ -568,27 +565,23 @@ div:focus {
 	padding: 10px;
 }
 
-/* whatFBknows */
+/* home Questions */
 
-#whatfbknows {
+
+#whatearns, #reallyforfree, #whatfbknows {
 	display: none;
-	border: 6px solid #999;
-	width: 670px;
-	padding: 15px;
-	color: black;
-	line-height: 2.0em;
-	background-color: #ECECEC;
-		li {
-			list-style: none;
-			line-height: 2.0em;
-		}
-		h4{
-			line-height: 2.0em;
-		}
+	text-align: left; 
+	float: right;
+	width: 96%;
+	margin-bottom: 10px;
+	margin-top: 10px;
 }
 
-#whatearns, #reallyforfree {
-	display: none;
+/* fix menu navbar bug */
+.navbar .nav li.dropdown.open > .dropdown-toggle,
+.navbar .nav li.dropdown.active > .dropdown-toggle,
+.navbar .nav li.dropdown.open.active > .dropdown-toggle {
+  background-color: transparent !important;
 }
 
 
